--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
               <div class="inputWrap">
                   <h2>HIT</h2>
                   <div class="ul">
-                      <input type="radio" name="hit" value="head" id="headHit" required>
+                      <input type="radio" name="hit" value="head" id="headHit">
                       <label for="headHit">
                           <span>HEAD</span>
                       </label>
-                      <input type="radio" name="hit" value="body" id="bodyHit" required>
+                      <input type="radio" name="hit" value="body" id="bodyHit">
                       <label for="bodyHit">
                           <span>BODY</span>
                       </label>
-                      <input type="radio" name="hit" value="foot" id="footHit" required>
+                      <input type="radio" name="hit" value="foot" id="footHit">
                       <label for="footHit">
                           <span>FOOT</span>
                       </label>
@@ -32,15 +32,15 @@
               <div class="inputWrap">
                   <h2>defence</h2>
                   <div class="ul">
-                      <input type="radio" name="defence" value="head" id="headDefence" required>
+                      <input type="radio" name="defence" value="head" id="headDefence">
                       <label for="headDefence">
                           <span>HEAD</span>
                       </label>
-                      <input type="radio" name="defence" value="body" id="bodyDefence" required>
+                      <input type="radio" name="defence" value="body" id="bodyDefence">
                       <label for="bodyDefence">
                           <span>BODY</span>
                       </label>
-                      <input type="radio" name="defence" value="foot" id="footDefence" required>
+                      <input type="radio" name="defence" value="foot" id="footDefence">
                       <label for="footDefence">
                           <span>FOOT</span>
                       </label>
