--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
             </form>
             
         </div>
-        <div class="chat"></div>
+        <div class="chat">
+            
+        </div>
         <div class="wall-left"></div>
         <div class="wall-right"></div>
     </div>
