--- a/arenas.html
+++ b/arenas.html
@@ -11,55 +11,55 @@
 <body>
     <div class="root">
         <div class="arenas arena1">
-            <form class="control">
-              <div class="inputWrap">
-                  <h2>HIT</h2>
-                  <div class="ul">
-                      <input type="radio" name="hit" value="head" id="headHit">
-                      <label for="headHit">
-                          <span>HEAD</span>
-                      </label>
-                      <input type="radio" name="hit" value="body" id="bodyHit">
-                      <label for="bodyHit">
-                          <span>BODY</span>
-                      </label>
-                      <input type="radio" name="hit" value="foot" id="footHit">
-                      <label for="footHit">
-                          <span>FOOT</span>
-                      </label>
-                  </div>
-              </div>
-              <div class="inputWrap">
-                  <h2>defence</h2>
-                  <div class="ul">
-                      <input type="radio" name="defence" value="head" id="headDefence">
-                      <label for="headDefence">
-                          <span>HEAD</span>
-                      </label>
-                      <input type="radio" name="defence" value="body" id="bodyDefence">
-                      <label for="bodyDefence">
-                          <span>BODY</span>
-                      </label>
-                      <input type="radio" name="defence" value="foot" id="footDefence">
-                      <label for="footDefence">
-                          <span>FOOT</span>
-                      </label>
-                  </div>
-              </div>
-              <div class="buttonWrap">
-                  <button class="button" type="submit">
-                      Fight
-                  </button>
-              </div>
-            </form>
+          <form class="control">
+            <div class="inputWrap">
+                <h2>HIT</h2>
+                <div class="ul">
+                    <input type="radio" name="hit" value="head" id="headHit">
+                    <label for="headHit">
+                        <span>HEAD</span>
+                    </label>
+                    <input type="radio" name="hit" value="body" id="bodyHit">
+                    <label for="bodyHit">
+                        <span>BODY</span>
+                    </label>
+                    <input type="radio" name="hit" value="foot" id="footHit">
+                    <label for="footHit">
+                        <span>FOOT</span>
+                    </label>
+                </div>
+            </div>
+            <div class="inputWrap">
+                <h2>defence</h2>
+                <div class="ul">
+                    <input type="radio" name="defence" value="head" id="headDefence">
+                    <label for="headDefence">
+                        <span>HEAD</span>
+                    </label>
+                    <input type="radio" name="defence" value="body" id="bodyDefence">
+                    <label for="bodyDefence">
+                        <span>BODY</span>
+                    </label>
+                    <input type="radio" name="defence" value="foot" id="footDefence">
+                    <label for="footDefence">
+                        <span>FOOT</span>
+                    </label>
+                </div>
+            </div>
+            <div class="buttonWrap">
+                <button class="button" id="button" type="submit" disabled>
+                    Fight
+                </button>
+            </div>
+          </form>
             
-        </div>
+        </div> <!-- </.arenas> -->
         <div class="chat">
             
         </div>
         <div class="wall-left"></div>
         <div class="wall-right"></div>
-    </div>
+    </div> <!-- </.root> -->
     <script src="main.js" type="module"></script>
 </body>
 </html>
