--- a/index.html
+++ b/index.html
@@ -2,21 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="author" content="Boris Web">
+    <meta name="description" content="A browser game created on base Mortal Kombat">
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicons/site.webmanifest">
+    <link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="apple-mobile-web-capable" content="yes">
+    <meta name="MobileOptimized" content="width">
+    <meta name="HandheldFriendly" content="true">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mortal Kombat</title>
+
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<div class="root">
-    <div class="title">
-        SELECT YOUR FIGHTERS
+    <div class="root">
+        <h1 class="title">
+            SELECT YOUR FIGHTER
+        </h1>
+        <div class="player"></div>
+        <div class="parent"></div>
     </div>
-    <div class="player"></div>
-    <div class="parent"></div>
 
-    <script src="index.js"></script>
-</div>
+<script src="index.js"></script>
 </body>
 </html>
