google analitic, arenas

--- a/arenas.html
+++ b/arenas.html
@@ -15,6 +15,16 @@
   <meta name="theme-color" content="#ffffff">
 
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+ <!--  <script async src="https://www.googletagmanager.com/gtag/js?id=G-57GWLDPJ80"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-57GWLDPJ80');
+  </script> -->
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-capable" content="yes">
   <meta name="MobileOptimized" content="width">
@@ -26,7 +36,7 @@
 </head>
 <body>
     <div class="root">
-        <div class="arenas arena1">
+        <div class="arenas">
           <form class="control">
             <div class="inputWrap">
                 <h2>HIT</h2>
