--- a/arenas.html
+++ b/arenas.html
@@ -32,7 +32,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Arenas</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/arenas.css">
 </head>
 <body>
     <div class="root">
@@ -87,6 +87,6 @@
         <div class="wall-left"></div>
         <div class="wall-right"></div>
     </div> <!-- </.root> -->
-    <script src="main.js" type="module"></script>
+    <script src="js/main.js" type="module"></script>
 </body>
 </html>
