--- a/select.html
+++ b/select.html
@@ -32,11 +32,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mortal Kombat</title>
 
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/select.css">
 </head>
 <body>
-    
+    <div class="root">
+        <h1 class="title">
+            SELECT YOUR FIGHTER
+        </h1>
+        <div class="player"></div>
+        <div class="parent"></div>
+    </div>
 
-
+<script src="js/index.js"></script>
 </body>
 </html>
