--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
 </head>
 <body>
     
+    <div class="container">
+        <div class="intro">
+           <a class="intro__link" href="#">START</a>
+        </div>
+        <audio src="assets/audio/mk3-00017.mp3" type="audio/mp3"></audio>
+    </div>
 
-
+    <script src="js/index.js"></script>
 </body>
 </html>
