--- a/select.html
+++ b/select.html
@@ -43,6 +43,6 @@
         <div class="parent"></div>
     </div>
 
-<script src="js/index.js"></script>
+<script src="js/select.js"></script>
 </body>
 </html>
