--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
     
     <div class="container">
         <div class="intro">
-           <a class="intro__link" href="#">START</a>
+           <a class="intro__link" href="select.html">START</a>
         </div>
-        <audio src="assets/audio/mk3-00017.mp3" type="audio/mp3"></audio>
+        <audio id="audio" src="assets/audio/title-screen/mk3-00021-2.mp3" type="audio/mp3" autoplay loop>
+           
+        </audio>
     </div>
-
-    <script src="js/index.js"></script>
 </body>
 </html>
