--- a/arenas.html
+++ b/arenas.html
@@ -16,7 +16,7 @@
 
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
- <!--  <script async src="https://www.googletagmanager.com/gtag/js?id=G-57GWLDPJ80"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-57GWLDPJ80"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -30,9 +30,10 @@
   <meta name="MobileOptimized" content="width">
   <meta name="HandheldFriendly" content="true">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Arenas</title>
+  <title>Mortal Kombat - Fight</title>
 
-    <link rel="stylesheet" href="style/arenas.css">
+  <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="style/arenas.css">
 </head>
 <body>
     <div class="root">
