--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta name="MobileOptimized" content="width">
     <meta name="HandheldFriendly" content="true">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mortal Kombat</title>
+    <title>Mortal Kombat - Start</title>
 
     <link rel="stylesheet" href="style/style.css">
 </head>
@@ -40,9 +40,7 @@
         <div class="intro">
            <a class="intro__link" href="select.html">START</a>
         </div>
-        <audio id="audio" src="assets/audio/title-screen/mk3-00021-2.mp3" type="audio/mp3" autoplay loop>
-           
-        </audio>
+        <audio id="audio" src="assets/audio/title-screen/mk3-00021-2.mp3" type="audio/mp3" autoplay loop></audio>
     </div>
 </body>
 </html>
