--- a/select.html
+++ b/select.html
@@ -30,8 +30,9 @@
     <meta name="MobileOptimized" content="width">
     <meta name="HandheldFriendly" content="true">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mortal Kombat</title>
+    <title>Mortal Kombat - Select</title>
 
+    <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/select.css">
 </head>
 <body>
