--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         <div class="intro">
            <a class="intro__link" href="select.html">START</a>
         </div>
-        <audio id="audio" src="assets/audio/title-screen/mk3-00021-2.mp3" type="audio/mp3" autoplay loop></audio>
+        <audio id="audio"></audio>
     </div>
+
+    <script src="js/index.js"></script>
 </body>
 </html>
