--- a/arenas.html
+++ b/arenas.html
@@ -36,7 +36,7 @@
   <link rel="stylesheet" href="style/arenas.css">
 </head>
 <body>
-    <div class="root">
+    <div class="root root--arenas">
         <div class="arenas">
           <form class="control">
             <div class="inputWrap">
