--- a/select.html
+++ b/select.html
@@ -40,8 +40,10 @@
         <h1 class="title">
             SELECT YOUR FIGHTER
         </h1>
-        <div class="player"></div>
-        <div class="parent"></div>
+        
+        <div class="parent">
+            <div class="player"></div>
+        </div>
     </div>
 
 <script src="js/select.js"></script>
