--- a/select.html
+++ b/select.html
@@ -15,7 +15,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-   <!--  <script async src="https://www.googletagmanager.com/gtag/js?id=G-57GWLDPJ80"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-57GWLDPJ80"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -40,10 +40,11 @@
         <h1 class="title">
             SELECT YOUR FIGHTER
         </h1>
-        
         <div class="parent">
             <div class="player"></div>
         </div>
+        <audio id="backMusic" src="assets/audio/select-screen/mk3-00010.mp3" autoplay loop></audio>
+        <audio id="audioNamePlayer"></audio>
     </div>
 
 <script src="js/select.js"></script>
