--- a/arenas.html
+++ b/arenas.html
@@ -79,6 +79,7 @@
                 </button>
                 
             </div>
+            <audio id="audioHit"></audio>
           </form>
             
         </div> <!-- </.arenas> -->
@@ -87,6 +88,7 @@
         </div>
         <div class="wall-left"></div>
         <div class="wall-right"></div>
+        <audio id="audio" loop></audio>
     </div> <!-- </.root> -->
     <script src="js/main.js" type="module"></script>
 </body>
